Jn replicate sta rsolo expression (#378)
* Starting refactor of FunctionalDataProcessor to allow for multiple strategies

* Starting refactor of FunctionalDataProcessor to allow for multiple strategies

* Starting refactor of FunctionalDataProcessor to allow for multiple strategies

* Starting refactor of FunctionalDataProcessor to allow for multiple strategies

* Starting refactor of FunctionalDataProcessor to allow for multiple strategies

* Code refactored, MQ 0,3,10 DropSeq strategy passes integration test against ~ 400 full cells of data using the production version of code.

* Propagated functional annotation strategy (dropseq vs StarSolo) forward to all other programs.

* Propagated functional annotation strategy (dropseq vs StarSolo) forward to all other programs.

* Propagated functional annotation strategy (dropseq vs StarSolo) forward to all other programs.

* Disambugiation of antisense coding from sense intronic classifications.

Noting broken yet, but classifier is still in testing.

* Disambugiation of antisense coding from sense intronic classifications.

Noting broken yet, but classifier is still in testing.

* Disambugiation of antisense coding from sense intronic classifications.

Classifier looking ok, even if slightly janky.

* Updated classification to better handle situations where there are multiple genes.  We care more about resolving to a sense or antisense interpretation, rather than the gene in particular that we'd assign a read to.

* Updated classification to better handle situations where there are multiple genes.  We care more about resolving to a sense or antisense interpretation, rather than the gene in particular that we'd assign a read to.

* Updated classification to better handle situations where there are multiple genes.  We care more about resolving to a sense or antisense interpretation, rather than the gene in particular that we'd assign a read to.

* TagReadWithGeneFunction now supports a