@@ -1,20 +1,19 @@
-package org.broadinstitute.dropseqrna.utils.readiterators;
+package org.broadinstitute.dropseqrna.annotation.functionaldata;
 
-import org.broadinstitute.dropseqrna.annotation.FunctionalData;
-import org.broadinstitute.dropseqrna.annotation.FunctionalDataProcessor;
+import org.broadinstitute.dropseqrna.utils.readiterators.StrandStrategy;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 import picard.annotation.LocusFunction;
 
 import java.util.List;
 
-public class FunctionalDataProcessorTest {
+public class StarSoloFunctionalDataProcessorTest {
 
 
 	@Test
 	public void testSingleFD () {
 		LocusFunction [] acceptedFunctions = {LocusFunction.CODING, LocusFunction.UTR};
-		FunctionalDataProcessor fdp = new FunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		FunctionalDataProcessorI fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
 		String [] genes = {"A"};
 		String [] strands = {"+"};
 		LocusFunction [] locusFunctions = {LocusFunction.CODING};
@@ -22,7 +21,7 @@ public class FunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 1);
 		FunctionalData fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.getGeneStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 
 		fdList = fdp.filterToPreferredAnnotations(fdList);
@@ -33,7 +32,7 @@ public class FunctionalDataProcessorTest {
 	@Test
 	public void testNoResult () {
 		LocusFunction [] acceptedFunctions = {LocusFunction.CODING, LocusFunction.UTR};
-		FunctionalDataProcessor fdp = new FunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		FunctionalDataProcessorI fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
 		String [] genes = {"A"};
 		String [] strands = {"+"};
 		LocusFunction [] locusFunctions = {LocusFunction.INTRONIC};
@@ -48,7 +47,7 @@ public class FunctionalDataProcessorTest {
 	@Test
 	public void testFunctionalFiltering () {
 		LocusFunction [] acceptedFunctions = {LocusFunction.INTRONIC};
-		FunctionalDataProcessor fdp = new FunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		FunctionalDataProcessorI fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
 		String [] genes = {"A", "A"};
 		String [] strands = {"+", "+"};
 		LocusFunction [] locusFunctions = {LocusFunction.CODING, LocusFunction.INTRONIC};
@@ -57,13 +56,13 @@ public class FunctionalDataProcessorTest {
 
 		// now accept UTR and INTRONIC.
 		LocusFunction [] acceptedFunctions2 = {LocusFunction.INTRONIC, LocusFunction.CODING};
-		fdp = new FunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions2);
+		fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions2);
 		fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, false);
 		Assert.assertEquals(fdList.size(), 1);
 
 		FunctionalData fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[1]);
-		Assert.assertEquals(fd.getStrand(), strands[1]);
+		Assert.assertEquals(fd.getGeneStrand(), strands[1]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 
 		fdList = fdp.filterToPreferredAnnotations(fdList);
@@ -74,48 +73,49 @@ public class FunctionalDataProcessorTest {
 	//Desired CODING reads, have CODING read on SENSE and ANTISENESE.  Test both.
 	@Test
 	public void testStrandStrategy () {
+		// STARSolo filtering doesn't filter by strand.
 		LocusFunction [] acceptedFunctions = {LocusFunction.CODING, LocusFunction.UTR, LocusFunction.INTRONIC};
-		FunctionalDataProcessor fdp = new FunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		FunctionalDataProcessorI fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
 		String [] genes = {"A", "B"};
 		String [] strands = {"+", "-"};
 		LocusFunction [] locusFunctions = {LocusFunction.CODING, LocusFunction.CODING};
 		// SENSE STRAND TEST positive strand
 		List<FunctionalData> fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, false);
-		Assert.assertEquals(fdList.size(), 1);
-		FunctionalData fd = fdList.get(0);
+		Assert.assertEquals(fdList.size(), 2);
+		FunctionalData fd = fdList.getFirst();
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.getGeneStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 
 		// SENSE STRAND TEST negative strand
 		fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, true);
-		Assert.assertEquals(fdList.size(), 1);
-		fd = fdList.get(0);
+		Assert.assertEquals(fdList.size(), 2);
+		fd = fdList.get(1);
 		Assert.assertEquals(fd.getGene(), genes[1]);
-		Assert.assertEquals(fd.getStrand(), strands[1]);
+		Assert.assertEquals(fd.getGeneStrand(), strands[1]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[1]);
 
 		// ANTISENSE STRAND TESTs
-		fdp = new FunctionalDataProcessor(StrandStrategy.ANTISENSE, acceptedFunctions);
+		fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.ANTISENSE, acceptedFunctions);
 
 		// ANTISENSE STRAND TEST negative strand
 		fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, true);
-		Assert.assertEquals(fdList.size(), 1);
+		Assert.assertEquals(fdList.size(), 2);
 		fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.getGeneStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 
 		// ANTISENSE SENSE STRAND TEST positive strand
 		fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, false);
-		Assert.assertEquals(fdList.size(), 1);
-		fd = fdList.get(0);
+		Assert.assertEquals(fdList.size(), 2);
+		fd = fdList.get(1);
 		Assert.assertEquals(fd.getGene(), genes[1]);
-		Assert.assertEquals(fd.getStrand(), strands[1]);
+		Assert.assertEquals(fd.getGeneStrand(), strands[1]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[1]);
 
 		// BOTH returns both A and B.
-		fdp = new FunctionalDataProcessor(StrandStrategy.BOTH, acceptedFunctions);
+		fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.BOTH, acceptedFunctions);
 		fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, true);
 		Assert.assertEquals(fdList.size(), 2);
 		Assert.assertEquals(fdList.get(0).getGene(), genes[0]);
@@ -127,16 +127,16 @@ public class FunctionalDataProcessorTest {
 	@Test
 	public void testFunctionCollapse () {
 		LocusFunction [] acceptedFunctions = {LocusFunction.CODING, LocusFunction.UTR, LocusFunction.INTRONIC};
-		FunctionalDataProcessor fdp = new FunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		FunctionalDataProcessorI fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
 		String [] genes = {"A", "A"};
 		String [] strands = {"+", "+"};
 		LocusFunction [] locusFunctions = {LocusFunction.CODING, LocusFunction.INTRONIC};
 
 		List<FunctionalData> fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, false);
 		Assert.assertEquals(fdList.size(), 1);
-		FunctionalData fd = fdList.get(0);
+		FunctionalData fd = fdList.getFirst();
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.getGeneStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 
 		fdList = fdp.filterToPreferredAnnotations(fdList);
@@ -149,7 +149,7 @@ public class FunctionalDataProcessorTest {
 	// after filtering for the preferred type, only the coding read should be emitted.
 	public void testPreferredAnnotationTypeCodingIntronic () {
 		LocusFunction [] acceptedFunctions = {LocusFunction.CODING, LocusFunction.UTR, LocusFunction.INTRONIC};
-		FunctionalDataProcessor fdp = new FunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		FunctionalDataProcessorI fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
 		String [] genes = {"A", "B"};
 		String [] strands = {"+", "+"};
 		LocusFunction [] locusFunctions = {LocusFunction.CODING, LocusFunction.INTRONIC};
@@ -159,11 +159,11 @@ public class FunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 2);
 		FunctionalData fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.getGeneStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 		FunctionalData fd2 = fdList.get(1);
 		Assert.assertEquals(fd2.getGene(), genes[1]);
-		Assert.assertEquals(fd2.getStrand(), strands[1]);
+		Assert.assertEquals(fd2.getGeneStrand(), strands[1]);
 		Assert.assertEquals(fd2.getLocusFunction(), locusFunctions[1]);
 
 		// once you filter to the preferred annotations, coding is "the best", so you only have a single FunctionalData.
@@ -171,7 +171,7 @@ public class FunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 1);
 		fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.getGeneStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 	}
 
@@ -181,7 +181,7 @@ public class FunctionalDataProcessorTest {
 	// after filtering for the preferred type, both are emitted.  Sad days, this doesn't resolve ambiguity.
 	public void testPreferredAnnotationTypeCodingCoding () {
 		LocusFunction [] acceptedFunctions = {LocusFunction.CODING, LocusFunction.UTR, LocusFunction.INTRONIC};
-		FunctionalDataProcessor fdp = new FunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		FunctionalDataProcessorI fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
 		String [] genes = {"A", "B"};
 		String [] strands = {"+", "+"};
 		LocusFunction [] locusFunctions = {LocusFunction.CODING, LocusFunction.CODING};
@@ -191,11 +191,11 @@ public class FunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 2);
 		FunctionalData fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.getGeneStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 		FunctionalData fd2 = fdList.get(1);
 		Assert.assertEquals(fd2.getGene(), genes[1]);
-		Assert.assertEquals(fd2.getStrand(), strands[1]);
+		Assert.assertEquals(fd2.getGeneStrand(), strands[1]);
 		Assert.assertEquals(fd2.getLocusFunction(), locusFunctions[1]);
 
 		// once you filter to the preferred annotations, both are still present.
@@ -203,11 +203,11 @@ public class FunctionalDataProcessorTest {
 		Assert.assertEquals(fdList.size(), 2);
 		fd = fdList.get(0);
 		Assert.assertEquals(fd.getGene(), genes[0]);
-		Assert.assertEquals(fd.getStrand(), strands[0]);
+		Assert.assertEquals(fd.getGeneStrand(), strands[0]);
 		Assert.assertEquals(fd.getLocusFunction(), locusFunctions[0]);
 		fd2 = fdList.get(1);
 		Assert.assertEquals(fd2.getGene(), genes[1]);
-		Assert.assertEquals(fd2.getStrand(), strands[1]);
+		Assert.assertEquals(fd2.getGeneStrand(), strands[1]);
 		Assert.assertEquals(fd2.getLocusFunction(), locusFunctions[1]);
 	}
 
@@ -215,7 +215,7 @@ public class FunctionalDataProcessorTest {
 	@Test
 	public void testFromRealData1() {
 		LocusFunction [] acceptedFunctions = {LocusFunction.CODING, LocusFunction.UTR, LocusFunction.INTRONIC};
-		FunctionalDataProcessor fdp = new FunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		FunctionalDataProcessorI fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
 		String [] genes = {"CHKB-CPT1B", "CHKB-CPT1B", "CPT1B"};
 		String [] strands = {"-", "-", "-"};
 		LocusFunction [] locusFunctions = {LocusFunction.CODING, LocusFunction.INTRONIC, LocusFunction.UTR};
@@ -234,14 +234,14 @@ public class FunctionalDataProcessorTest {
 	@Test
 	public void testExample1() {
 		LocusFunction [] acceptedFunctions = {LocusFunction.CODING, LocusFunction.UTR, LocusFunction.INTRONIC};
-		FunctionalDataProcessor fdp = new FunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		FunctionalDataProcessorI fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
 		String [] genes = {"A", "A", "B", "C"};
 		String [] strands = {"+", "+", "+", "-"};
 		LocusFunction [] locusFunctions = {LocusFunction.CODING, LocusFunction.INTRONIC, LocusFunction.INTRONIC, LocusFunction.INTRONIC};
 
 		// Read on the + strand.
 		List<FunctionalData> fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, false);
-		Assert.assertEquals(fdList.size(), 2);
+		Assert.assertEquals(fdList.size(), 3); // STARsolo doesn't filter out the wrong strand so each gene is simplified but present.
 
 		// once you filter to the preferred annotations, only the coding gene is retained.
 		
@@ -255,7 +255,7 @@ public class FunctionalDataProcessorTest {
 	public void testExample2() {
 		
 		LocusFunction [] acceptedFunctions = {LocusFunction.INTRONIC};
-		FunctionalDataProcessor fdp = new FunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		FunctionalDataProcessorI fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
 		String [] genes = {"A", "A", "B", "C"};
 		String [] strands = {"+", "+", "+", "-"};
 		LocusFunction [] locusFunctions = {LocusFunction.CODING, LocusFunction.INTRONIC, LocusFunction.INTRONIC, LocusFunction.INTRONIC};
@@ -263,7 +263,7 @@ public class FunctionalDataProcessorTest {
 		// Read on the + strand.
 		// Because the read overlaps Gene A on both the intronic and exonic portions, the gene annotation is discarded.
 		List<FunctionalData> fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, false);
-		Assert.assertEquals(fdList.size(), 1);
+		Assert.assertEquals(fdList.size(), 2);
 
 		// once you filter to the preferred annotations, only the coding gene is retained.		
 		fdList = fdp.filterToPreferredAnnotations(fdList);
@@ -276,7 +276,7 @@ public class FunctionalDataProcessorTest {
 	public void testExample3() {
 		
 		LocusFunction [] acceptedFunctions = {LocusFunction.CODING, LocusFunction.UTR};
-		FunctionalDataProcessor fdp = new FunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		FunctionalDataProcessorI fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
 		String [] genes = {"A", "A", "B", "C"};
 		String [] strands = {"+", "+", "+", "-"};
 		LocusFunction [] locusFunctions = {LocusFunction.CODING, LocusFunction.INTRONIC, LocusFunction.INTRONIC, LocusFunction.INTRONIC};
@@ -286,9 +286,37 @@ public class FunctionalDataProcessorTest {
 		List<FunctionalData> fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, false);
 		Assert.assertEquals(fdList.size(), 0);
 
-		// once you filter to the preferred annotations, only the coding gene is retained.		
+		// once you filter to the preferred annotations, only the coding gene is retained.
 		fdList = fdp.filterToPreferredAnnotations(fdList);
 		Assert.assertEquals(fdList.size(), 0);
+
+	}
+
+	@Test
+	public void testAntiSenseVsIntronic () {
+		LocusFunction [] acceptedFunctions = {LocusFunction.CODING, LocusFunction.UTR, LocusFunction.INTRONIC};
+		FunctionalDataProcessorI fdp = new StarSoloFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		String [] genes = {"A", "B"};
+		String [] strands = {"-", "+"};
+		LocusFunction [] locusFunctions = {LocusFunction.CODING, LocusFunction.INTRONIC};
+
+		// Read on the + strand.
+		List<FunctionalData> fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, false);
+		Assert.assertEquals(fdList.size(), 2); // STARsolo doesn't filter out the wrong strand so each gene is simplified but present.
+
+		// The coding gene is preferred, but is on the wrong strand so isn't counted.
+		fdList = fdp.filterToPreferredAnnotations(fdList);
+		Assert.assertEquals(fdList.size(), 0);
+
+		// Contrast with DropSeq, which will find the intronic gene
+		fdp = new DropSeqFunctionalDataProcessor(StrandStrategy.SENSE, acceptedFunctions);
+		fdList = fdp.getFilteredFunctionalData(genes, strands, locusFunctions, false);
+		Assert.assertEquals(fdList.size(), 1); // Dropseq filters out off-strand results first.
+
+		// once you filter to the preferred annotations, only the intronic gene is retained
+		fdList = fdp.filterToPreferredAnnotations(fdList);
+		Assert.assertEquals(fdList.size(), 1);
+		Assert.assertEquals(fdList.getFirst().getGene(), "B");
 
 	}
 
